conformance/tests/httproute-external-auth-backend-unavailable.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-auth-unavailable
  namespace: gateway-conformance-infra
spec:
  selector:
    app: nonexistent-external-auth-backend
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-auth-backend-unavailable
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - filters:
    - type: ExternalAuth
      externalAuth:
        protocol: HTTP
        backendRef:
          name: external-auth-unavailable
          port: 9002
        http:
          allowedHeaders: ~
    backendRefs:
    - name: infra-backend-v1
      port: 8080
